--- a/webjars/src/main/resources/static/js/jquery/easyui/themes/default/easyui.css
+++ b/webjars/src/main/resources/static/js/jquery/easyui/themes/default/easyui.css
@@ -3429,6 +3429,9 @@
   margin: 0 -12px;
   border: 0;
 }
+.sidemenu-tooltip.tooltip-left {
+  margin: 0 12px;
+}
 .sidemenu-tooltip .tooltip-arrow-outer,
 .sidemenu-tooltip .tooltip-arrow {
   display: none;
