--- a/admin/src/main/resources/static/css/bootstrap-plugins/bootstrap.textbox.css
+++ b/admin/src/main/resources/static/css/bootstrap-plugins/bootstrap.textbox.css
@@ -10,15 +10,14 @@
 	height : 100%;
 }
 
-.textbox a.textbox-addon {
+.textbox .textbox-addon {
 	width: 20px;
-	height: auto;
-	top: 0px;
+	height: 100%;
 	cursor : pointer;
 	opacity: 0.7;
 }
 
-.textbox a.textbox-addon:hover {
+.textbox .textbox-addon:hover {
 	opacity: 1;
 }
 
